--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "dependencies": {
     "@apollo/client": "^3.12.6",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.473.0",
     "next": "14.2.7",
     "react": "^18",
